[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kohler-anthem"
version = "0.1.4"
description = "Python client library for Kohler Anthem Digital Shower API"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "Yon", email = "yon@example.com" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Typing :: Typed",
]
dependencies = [
    "aiohttp>=3.9.0",
    "eval-type-backport>=0.2.0; python_version < '3.10'",
    "paho-mqtt>=2.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "aioresponses>=0.7",
    "build>=1.0",
    "mypy>=1.8",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.0",
    "ruff>=0.2",
    "twine>=5.0",
    "types-paho-mqtt>=1.6",
]

[project.urls]
Homepage = "https://github.com/yon/kohler-anthem"
Repository = "https://github.com/yon/kohler-anthem"

[tool.hatch.build.targets.wheel]
packages = ["src/kohler_anthem"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
strict = true
plugins = ["pydantic.mypy"]

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
